--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/icon-font.css" />
+
+    <link rel="stylesheet" href="css/index.css" />
+
   </head>
   <body>
     <header class="header">
@@ -26,22 +29,69 @@
       </div>
     </header>
     <main>
-      <!-- <section class="section-about">
-        <div class="u-center-text">
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exiting tours for adventurous people
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
-             col 1 of 2
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+              harum assumenda in, quibusdam libero eum aliquid labore laboriosam
+              odio maiores voluptatum ut beatae, recusandae facere et tempore,
+              reiciendis excepturi amet.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              expedita necessitatibus quis eveniet, architecto accusamus.
+              Voluptate nesciunt illum excepturi aliquid sunt !
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
-             col 1 of 2
+            <div class="composition">
+              <img
+                src="images/nat-1-large.jpg"
+                alt="photo-1"
+                class="composition_photo composition_photo--p1"
+              /><img
+                src="images/nat-2-large.jpg"
+                alt="photo-2"
+                class="composition_photo composition_photo--p2"
+              /><img
+                src="images/nat-3-large.jpg"
+                alt="photo-3"
+                class="composition_photo composition_photo--p3"
+              />
+            </div>
           </div>
         </div>
-      </section> -->
-      <section class="grid-test">
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                harum assumenda
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- <section class="grid-test">
         <div class="row">
           <div class="col-1-of-2">
             Col 1 of 2
@@ -124,7 +174,7 @@
           </div>
           
         </div>
-      </section>
+      </section> -->
     </main>
   </body>
 </html>
