--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/icon-font.css" />
 
     <link rel="stylesheet" href="css/index.css" />
-
   </head>
   <body>
     <header class="header">
@@ -43,8 +42,7 @@
             <p class="paragraph">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
               harum assumenda in, quibusdam libero eum aliquid labore laboriosam
-              odio maiores voluptatum ut beatae, recusandae facere et tempore,
-              reiciendis excepturi amet.
+              odio maiores voluptatum ut beatae.
             </p>
 
             <h3 class="heading-tertiary u-margin-bottom-small">
@@ -76,18 +74,72 @@
           </div>
         </div>
       </section>
+      
       <section class="section-features">
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-world"></i>
-              <h3 class="heading-tertiary">Explore the world</h3>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
               <p class="feature-box__text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                 harum assumenda
               </p>
             </div>
           </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                harum assumenda
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                harum assumenda
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                harum assumenda
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">Col 1 of 3</div>
+          <div class="col-1-of-3">Col 1 of 3</div>
         </div>
       </section>
 
