--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
+
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+      <label for="navi-toggle" class="navigation__button">MENU</label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link">About Natous</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Your benfits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+
+        </ul>
+      </nav>
+    </div>
+
+
     <header class="header">
       <div class="header__logo-box">
         <img src="./images/logo-white.png" alt="Logo" class="header__logo" />
@@ -236,10 +254,9 @@
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
-             <source src="images/video.mp4" type="video/mp4">
-             <source src="images/video.webm" type="video/webm">
-             Your browser is not supported!
-
+            <source src="images/video.mp4" type="video/mp4" />
+            <source src="images/video.webm" type="video/webm" />
+            Your browser is not supported!
           </video>
         </div>
         <div class="u-center-text u-margin-bottom-big">
@@ -248,7 +265,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="images/nat-8.jpg" alt="avatar" class="story__img">
+              <img src="images/nat-8.jpg" alt="avatar" class="story__img" />
               <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
@@ -258,8 +275,9 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                 harum assumenda in, quibusdam libero eum aliquid labore
-                laboriosam odio maiores voluptatum ut beatae.quibusdam libero eum aliquid labore
-                laboriosam odio maiores voluptatum ut beatae libero eum aliquid labore.
+                laboriosam odio maiores voluptatum ut beatae.quibusdam libero
+                eum aliquid labore laboriosam odio maiores voluptatum ut beatae
+                libero eum aliquid labore.
               </p>
             </div>
           </div>
@@ -267,7 +285,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="images/nat-9.jpg" alt="avatar" class="story__img">
+              <img src="images/nat-9.jpg" alt="avatar" class="story__img" />
               <figcaption class="story__caption">Jack wilson</figcaption>
             </figure>
             <div class="story__text">
@@ -277,14 +295,15 @@
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                 harum assumenda in, quibusdam libero eum aliquid labore
-                laboriosam odio maiores voluptatum ut beatae.quibusdam libero eum aliquid labore
-                laboriosam odio maiores voluptatum ut beatae libero eum aliquid labore.
+                laboriosam odio maiores voluptatum ut beatae.quibusdam libero
+                eum aliquid labore laboriosam odio maiores voluptatum ut beatae
+                libero eum aliquid labore.
               </p>
             </div>
           </div>
         </div>
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn-text">Reat all stories  &rarr;</a>
+          <a href="#" class="btn-text">Reat all stories &rarr;</a>
         </div>
       </section>
 
@@ -292,24 +311,82 @@
         <div class="row">
           <div class="book">
             <div class="book__form">
-              <div class=" u-margin-bottom-medium">
+              <div class="u-margin-bottom-medium">
                 <h2 class="heading-secondary">Start working now</h2>
               </div>
               <form action="#" class="form">
                 <div class="form__group">
-                  <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full Name"
+                    id="name"
+                    required
+                  />
                   <label for="name" class="form__label">Full name</label>
                 </div>
                 <div class="form__group">
-                  <input type="email" class="form__input" placeholder="Email address" id="email" required>
-                  <label for="email" class="form__label">Emain/label>
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                    required
+                  />
+                  <label for="email" class="form__label">Email</label>
                 </div>
 
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="small" name="size"/>
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group
+                    </label>
+                  </div>
+
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="large" name="size"/>
+                    <label for="large" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Large tour group
+                    </label>
+                  </div>
+                </div>
+                <div class="form__group">
+                  <button class="btn btn--green">Next step &rarr;</button>
+                </div>
               </form>
             </div>
           </div>
         </div>
       </section>
+
+      <footer class="footer">
+        <div class="footer__logo-box">
+          <img src="images/logo-green-2x.png" alt="Full logo" class="footer__logo">
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <div class="footer__navigation">
+              <ul class="footer__list">
+                <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+                <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+
+              </ul>
+            </div>
+          </div>
+          <div class="col-1-of-2">
+            <p class="footer__copyright">
+              Built by <a href="#" class="footer__link">Vara prasad</a> for learning purpose <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by vara prasad. You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own design. A credit to the original author, Vara prasad, is of course highly appreciated!
+            </p>
+          </div>
+
+        </div>
+      </footer>
 
       <!-- <section class="grid-test">
         <div class="row">
