--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-
     <div class="navigation">
-      <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
       <label for="navi-toggle" class="navigation__button">
-        <span class="navigation__icon">
-          &nbsp;
-        </span>
+        <span class="navigation__icon"> &nbsp; </span>
       </label>
       <div class="navigation__background">&nbsp;</div>
       <nav class="navigation__nav">
         <ul class="navigation__list">
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
-
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>01</span>About Natous</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>02</span>Your benfits</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>04</span>Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>05</span>Book now</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -45,7 +53,9 @@
           <span class="heading-primary--main">OUTDOORS</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
     <main>
@@ -79,6 +89,29 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
+                srcset="images/nat-1.jpg 300w, images/nat-1-large.jpg 1000w"
+                sizes="(max-width:56.25em) 20vw,(max-width:37.5em) 30vw,300px"
+                alt="photo-1"
+                class="composition_photo composition_photo--p1"
+                src="images/nat-1-large.jpg"
+              />
+
+              <img
+                srcset="images/nat-2.jpg 300w, images/nat-2-large.jpg 1000w"
+                sizes="(max-width:56.25em) 20vw,(max-width:37.5em) 30vw,300px"
+                alt="photo-2"
+                class="composition_photo composition_photo--p2"
+                src="images/nat-2-large.jpg"
+              />
+
+              <img
+                srcset="images/nat-3.jpg 300w, images/nat-3-large.jpg 1000w"
+                sizes="(max-width:56.25em) 20vw,(max-width:37.5em) 30vw,300px"
+                alt="photo-3"
+                class="composition_photo composition_photo--p3"
+                src="images/nat-3-large.jpg"
+              />
+              <!-- <img
                 src="images/nat-1-large.jpg"
                 alt="photo-1"
                 class="composition_photo composition_photo--p1"
@@ -90,7 +123,7 @@
                 src="images/nat-3-large.jpg"
                 alt="photo-3"
                 class="composition_photo composition_photo--p3"
-              />
+              /> -->
             </div>
           </div>
         </div>
@@ -152,7 +185,7 @@
         </div>
       </section>
 
-      <section class="section-tours " id="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most popular tours</h2>
         </div>
@@ -341,7 +374,12 @@
 
                 <div class="form__group u-margin-bottom-medium">
                   <div class="form__radio-group">
-                    <input type="radio" class="form__radio-input" id="small" name="size"/>
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size"
+                    />
                     <label for="small" class="form__radio-label">
                       <span class="form__radio-button"></span>
                       Small tour group
@@ -349,7 +387,12 @@
                   </div>
 
                   <div class="form__radio-group">
-                    <input type="radio" class="form__radio-input" id="large" name="size"/>
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size"
+                    />
                     <label for="large" class="form__radio-label">
                       <span class="form__radio-button"></span>
                       Large tour group
@@ -364,8 +407,6 @@
           </div>
         </div>
       </section>
-
-      
 
       <!-- <section class="grid-test">
         <div class="row">
@@ -454,47 +495,86 @@
     </main>
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="images/logo-green-2x.png" alt="Full logo" class="footer__logo">
+        <picture class="footer__logo">
+          <source
+            srcset="
+              images/logo-green-small-1x.png 1x,
+              images/logo-green-small-2x.png 2x
+            "
+            media="(max-width:37.5em)"
+          />
+          <img
+            srcset="images/logo-green-1x.png 1x, images/logo-green-2x.png 2x"
+            alt="Full logo"
+            class="footer__logo"
+            src="images/logo-green-2x.png"
+          />
+        </picture>
       </div>
       <div class="row">
         <div class="col-1-of-2">
           <div class="footer__navigation">
             <ul class="footer__list">
-              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
-              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
-
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
             </ul>
           </div>
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built by <a href="#" class="footer__link">Vara prasad</a> for learning purpose <a href="#" class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by vara prasad. You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as your own design. A credit to the original author, Vara prasad, is of course highly appreciated!
+            Built by <a href="#" class="footer__link">Vara prasad</a> for
+            learning purpose
+            <a href="#" class="footer__link">Advanced CSS and Sass</a>.
+            Copyright &copy; by vara prasad. You are 100% allowed to use this
+            webpage for both personal and commercial use, but NOT to claim it as
+            your own design. A credit to the original author, Vara prasad, is of
+            course highly appreciated!
           </p>
         </div>
-
       </div>
     </footer>
     <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
-          <img src="images/nat-8.jpg" alt="Tour photo" class="popup__img">
-          <img src="images/nat-9.jpg" alt="Tour photo" class="popup__img">
-
+          <img src="images/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="images/nat-9.jpg" alt="Tour photo" class="popup__img" />
         </div>
         <div class="popup__right">
           <a href="#section-tours" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-medium">
             Start booking now
           </h2>
-          <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
           <p class="popup__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem inventore consequatur alias. Nobis minus eligendi, aspernatur cupiditate pariatur dignissimos adipisci. Quos dicta, dolores molestias similique fugit temporibus, quae eligendi odio veniam fugiat, alias qui. Earum nemo et libero, porro voluptas, quidem eos odio dignissimos suscipit natus tenetur quo tempore. Aut, maxime ratione molestiae laudantium eveniet pariatur ut iusto perspiciatis velit obcaecati delectus animi harum iure commodi veniam! Blanditiis debitis inventore veritatis quas, omnis dolorum alias necessitatibus accusantium, modi neque soluta esse, sunt enim dolores libero culpa aspernatur assumenda perferendis accusamus nostrum? Rerum, dignissimos mollitia nesciunt quo maiores aut at dolorem.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+            inventore consequatur alias. Nobis minus eligendi, aspernatur
+            cupiditate pariatur dignissimos adipisci. Quos dicta, dolores
+            molestias similique fugit temporibus, quae eligendi odio veniam
+            fugiat, alias qui. Earum nemo et libero, porro voluptas, quidem eos
+            odio dignissimos suscipit natus tenetur quo tempore. Aut, maxime
+            ratione molestiae laudantium eveniet pariatur ut iusto perspiciatis
+            velit obcaecati delectus animi harum iure commodi veniam! Blanditiis
+            debitis inventore veritatis quas, omnis dolorum alias necessitatibus
+            accusantium, modi neque soluta esse, sunt enim dolores libero culpa
+            aspernatur assumenda perferendis accusamus nostrum? Rerum,
+            dignissimos mollitia nesciunt quo maiores aut at dolorem.
           </p>
           <a href="#" class="btn btn--green">Book now</a>
-
         </div>
       </div>
     </div>
